[package]
name = "aotp"
version = "0.1.0"
authors = ["Vincent Hanquez <vincent@typed.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cryptoxide = { version = "^0.3.3", features = ["sha1"] }
url = { version = "2.2" }
base32 = "0.4"
